# lean-wms

./: .dockerignore  .editorconfig  .env.example  .gitignore  .lintstagedrc.json  .npmrc  .prettierignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  PRD.md  README.md  docker-compose.yml  note.txt  package.json  pnpm-lock.yaml  rust-toolchain.toml  tsconfig.base.json  turbo.json  verify.bat
.cursor/plans/: initialize_lean_wms_project_structure_c3e4a30e.plan.md
.github/workflows/: cd.yml  ci.yml
apps/api/: .sea-orm.toml  Cargo.toml  Dockerfile  env.example  package.json
apps/api/src/: app_state.rs  config.rs  lib.rs  main.rs
apps/api/src/api/: auth.rs  mod.rs  orders.rs  products.rs  router.rs  sync.rs
apps/api/src/database/: connection.rs  entities.rs  mod.rs
apps/api/src/database/migration/: m20260109_000001_initial_schema.rs  mod.rs
apps/api/src/middleware/: mod.rs
apps/api/src/services/: auth.rs  mod.rs  sync.rs
apps/api/tests/: api_test.rs  auth_test.rs
apps/client-web/: Dockerfile  eslint.config.js  jest.config.js  package.json  tsconfig.app.json  tsconfig.jest.json  tsconfig.node.json
apps/client-web/src/: App.tsx  index.css
apps/client-web/src-tauri/: Cargo.toml  tauri.conf.json
apps/client-web/src-tauri/icons/: README.md  icon.icns
apps/client-web/src/components/: HealthCheck.tsx
apps/client-web/src/providers/: AuthProvider.tsx
apps/client-web/src/services/: api.ts
apps/client-web/src/store/: hooks.ts  index.ts
apps/client-web/src/store/slices/: authSlice.ts  ordersSlice.ts  productsSlice.ts
apps/client-web/src/test/: setup.ts
apps/client-web/src/utils/: bindings.ts  rspc.ts
apps/mobile/: .npmrc  App.tsx  app.json  eas.json  eslint.config.js  jest.config.js  package.json  tsconfig.json
apps/mobile/src/navigation/: AppNavigator.tsx  AuthNavigator.tsx  types.ts
apps/mobile/src/screens/auth/: LoginScreen.tsx
apps/mobile/src/screens/home/: HomeScreen.tsx
apps/mobile/src/services/: api.ts  auth.ts
apps/mobile/src/services/__tests__/: api.test.ts
apps/mobile/src/store/: hooks.ts  index.ts
apps/mobile/src/store/slices/: authSlice.ts  ordersSlice.ts  productsSlice.ts
apps/mobile/src/store/slices/__tests__/: authSlice.test.ts
apps/mobile/src/test/: setup.ts
backend/: package.json
doc/: ARCHITECTURE.md  BEST_PRACTICES_AUDIT.md  BLUEPRINT.md  BLUEPRINT_DESIGNER_FRONTEND.md  BLUEPRINT_ENGINEER_BACKEND.md  CONTRIBUTING.md  WHITEPAPER_FUTURE_FEATURES.md
doc/api/: README.md
doc/architecture/: ARCHITECTURE.md
doc/architecture/adr/: 0001-record-architecture-decisions.md  0002-backend-architecture-blueprint.md  0003-frontend-architecture-blueprint.md  0004-offline-sync-strategy.md  0005-row-level-security.md
doc/archive/: 00_READ_ME_DEPRECATED.md  AUDIT_BEST_PRACTICES.md  BLUEPRINT_OVERVIEW.md  GITHUB_PROJECT_SETUP.md  PROJECT_PLAN.md  ROADMAP.md  idea.txt
doc/archive/illustration/: architecture-diagram.txt
doc/backend/: README.md
doc/guides/: CONTRIBUTING.md  DEVOPS_GUIDE.md  RELEASE_PROCESS.md  TESTING.md
doc/illustration/: plantuml-diagram-backend.txt  plantuml-diagram-ui.txt
doc/planning/: PROJECT_PLAN.md  ROADMAP.md
doc/requirements/: PRD.md
my-app/: .env  .gitignore  App.tsx  package-lock.json  package.json
my-app/components/: InboundScreen.tsx  TodoDemo.tsx
my-app/lib/: database.type.ts  store.ts  supabase.ts  supalegend.ts
my-app/supabase/migrations/: 20260122155255_create_products_table.sql
scripts/: create_test_user.ps1
web-app/: .cta.json  package-lock.json  package.json  tsconfig.json
web-app/src/routes/: index.tsx
