[workspace]
members = ["apps/api", "apps/client-web/src-tauri"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Lean WMS Team"]
license = "MIT OR Apache-2.0"

# Workspace-wide lint configuration
[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"
unwrap_used = "warn"
expect_used = "warn"

[workspace.lints.rust]
unsafe_code = "forbid"
