[package]
name = "lean-wms-api"
version = "0.1.0"
edition = "2021"
default-run = "lean-wms-api"

[lib]
name = "lean_wms_api"
path = "src/lib.rs"

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"

[dependencies]
# Web Framework (Axum 0.7 for rspc-axum compatibility)
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.6.2", features = ["cors", "compression-gzip"] }

# Database
sea-orm = { version = "1.1.19", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
sea-orm-migration = { version = "1.1.19", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
async-trait = "0.1"

# Serialization & Utils
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
chrono = { version = "0.4.30", features = ["serde"] }
dotenv = "0.15.0"
thiserror = "1.0"

# Auth
jsonwebtoken = "9.3.0"
bcrypt = "0.15.1"

# Logging
log = "0.4.22"
env_logger = "0.11.6"

# API Docs
utoipa = { version = "4.2.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }

# RSPC (Type-safe API)
rspc = { version = "0.2.0" }
rspc-axum = { version = "0.1.1" }
specta = { version = "2.0.0-rc.20", features = ["uuid", "chrono"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.14.0"
